--- a/src/app/payment/payment-calculator/payment-calculator.component.html
+++ b/src/app/payment/payment-calculator/payment-calculator.component.html
@@ -1,4 +1,4 @@
 <mat-card class="mat-elevation-z2">
-  <span class="label">Funds spent:</span>
+  <span class="label">{{paymentTextKeys.FUNDS_SPENT}}:</span>
   <span class="result">{{calculateCost()}}</span>
 </mat-card>
