--- a/src/app/payment/payment-table/payment-table.component.html
+++ b/src/app/payment/payment-table/payment-table.component.html
@@ -1,30 +1,30 @@
 <table mat-table [dataSource]="payments" class="mat-elevation-z2">
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <th mat-header-cell *matHeaderCellDef>{{paymentTextKeys.PAYMENT_NAME}}</th>
+    <td mat-cell *matCellDef="let payment"> {{payment.name}} </td>
   </ng-container>
 
   <ng-container matColumnDef="cost">
-    <th mat-header-cell *matHeaderCellDef>Cost</th>
-    <td mat-cell *matCellDef="let element"> {{element.dayCost}} </td>
+    <th mat-header-cell *matHeaderCellDef>{{paymentTextKeys.COST}}</th>
+    <td mat-cell *matCellDef="let payment"> {{payment.dayCost}} </td>
   </ng-container>
 
   <ng-container [matColumnDef]="month" *ngFor="let month of months; index as i">
     <th mat-header-cell *matHeaderCellDef class="table-month-header-cell">{{month}}</th>
-    <td mat-cell *matCellDef="let element" class="table-month-cell">
+    <td mat-cell *matCellDef="let payment" class="table-month-cell">
       <mat-checkbox class="example-margin"
                     color="primary"
-                    [checked]="element?.months?.includes(i)"
-                    (change)="onSelect(element, i, $event)"
+                    [checked]="payment?.months?.includes(i)"
+                    (change)="onSelect(payment, i, $event)"
       ></mat-checkbox>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="remove">
-    <th mat-header-cell *matHeaderCellDef>Remove</th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="primary" (click)="removePayment(element)">
+    <th mat-header-cell *matHeaderCellDef>{{paymentTextKeys.REMOVE}}</th>
+    <td mat-cell *matCellDef="let payment">
+      <button mat-icon-button color="primary" (click)="removePayment(payment)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
